syntax = "proto3";

package akash.manifest.v2beta3;

import "gogoproto/gogo.proto";

import "akash/manifest/v2beta3/serviceexpose.proto";
import "akash/base/resources/v1beta4/resources.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all)         = true;
option go_package                       = "pkg.akt.dev/go/manifest/v2beta3";

// StorageParams
message StorageParams {
    string name   = 1 [
      (gogoproto.jsontag)  = "name",
      (gogoproto.moretags) = "yaml:\"name\""
    ];
    string mount  = 2 [
      (gogoproto.jsontag)  = "mount",
      (gogoproto.moretags) = "yaml:\"mount\""
    ];
    bool read_only = 3 [
      (gogoproto.jsontag)  = "readOnly",
      (gogoproto.moretags) = "yaml:\"readOnly\""
    ];
}

// ServicePermissions defines Kubernetes RBAC read permissions for the service.
// Grants access to specific cluster resources within the service's namespace.
//
// By default, services have no access to cluster resources (logs, events, etc).
// This follows Kubernetes security best practices of least privilege.
//
// Supported permission types:
//   - logs: Grants read access to pod logs and deployment info
//   - events: Grants read access to Kubernetes events
//
// Example SDL usage:
//   params:
//     permissions:
//       read:
//         - logs
//         - events
//
// Use cases:
//   - Self-monitoring applications that display their own logs
//   - Services that track deployment events for debugging
//   - Log aggregation tools running as sidecars
//
// Security note: Permissions are scoped to the service's own resources only.
// Services cannot access logs or events from other deployments.
//
// See docs/service-permissions.md for detailed documentation and examples.
// See: https://kubernetes.io/docs/reference/access-authn-authz/rbac/
message ServicePermissions {
  repeated string read = 1 [
    (gogoproto.jsontag)  = "read,omitempty",
    (gogoproto.moretags) = "yaml:\"read,omitempty\""
  ];
}

// ServiceParams
message ServiceParams {
  repeated StorageParams storage = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "storage",
    (gogoproto.moretags) = "yaml:\"storage\""
  ];
  ImageCredentials credentials = 10 [
    (gogoproto.nullable) = true,
    (gogoproto.jsontag)  = "credentials,omitempty",
    (gogoproto.moretags) = "yaml:\"credentials,omitempty\""
  ];
  ServicePermissions permissions = 11 [
    (gogoproto.nullable) = true,
    (gogoproto.jsontag)  = "permissions,omitempty",
    (gogoproto.moretags) = "yaml:\"permissions,omitempty\""
  ];
}

// Credentials to fetch image from registry
message ImageCredentials {
  string host = 1 [
    (gogoproto.jsontag)  = "host",
    (gogoproto.moretags) = "yaml:\"host\""
  ];
  string email = 2 [
    (gogoproto.jsontag)  = "email",
    (gogoproto.moretags) = "yaml:\"email\""
  ];
  string username = 3 [
    (gogoproto.jsontag)  = "username",
    (gogoproto.moretags) = "yaml:\"username\""
  ];
  string password = 4 [
    (gogoproto.jsontag)  = "password",
    (gogoproto.moretags) = "yaml:\"password\""
  ];
}

// Service stores name, image, args, env, unit, count and expose list of service
message Service {
  string name = 1 [
    (gogoproto.jsontag)  = "name",
    (gogoproto.moretags) = "yaml:\"name\""
  ];
  string image = 2 [
    (gogoproto.jsontag)  = "image",
    (gogoproto.moretags) = "yaml:\"image\""
  ];
  repeated string command = 3 [
    (gogoproto.jsontag)  = "command",
    (gogoproto.moretags) = "yaml:\"command\""
  ];
  repeated string args = 4 [
    (gogoproto.jsontag)  = "args",
    (gogoproto.moretags) = "yaml:\"args\""
  ];
  repeated string env = 5 [
    (gogoproto.nullable) = true,
    (gogoproto.jsontag)  = "env",
    (gogoproto.moretags) = "yaml:\"env\""
  ];
  akash.base.resources.v1beta4.Resources resources = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "resources",
    (gogoproto.moretags) = "yaml:\"resources\""
  ];
  uint32 count = 7 [
    (gogoproto.jsontag)  = "count",
    (gogoproto.moretags) = "yaml:\"count\""
  ];
  repeated ServiceExpose expose = 8 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "ServiceExposes",
    (gogoproto.jsontag)      = "expose",
    (gogoproto.moretags)     = "yaml:\"expose\""
  ];
  ServiceParams params = 9 [
    (gogoproto.nullable) = true,
    (gogoproto.jsontag)  = "params,omitempty",
    (gogoproto.moretags) = "yaml:\"params,omitempty\""
  ];
  ImageCredentials credentials = 10 [
    (gogoproto.nullable) = true,
    (gogoproto.jsontag)  = "credentials",
    (gogoproto.moretags) = "yaml:\"credentials\""
  ];
}
